--- a/rmeet_main/backend/.env
+++ b/rmeet_main/backend/.env
@@ -1,1 +1,2 @@
 DB_CONNECTION=mongodb+srv://DemoDB:DemoDB1001@democluster.7youhjx.mongodb.net/?retryWrites=true&w=majority
+TOKEN_SECRET = jkerhgegjn
