--- a/rmeet_main/backend/.env
+++ b/rmeet_main/backend/.env
@@ -1,1 +1,2 @@
-DB_CONNECTION=mongodb+srv://mythael0902:myth090298@democluster.u5r7xf4.mongodb.net/test?retryWrites=true&w=majority
+DB_CONNECTION=mongodb+srv://DemoDB:DemoDB1001@democluster.7youhjx.mongodb.net/test?authMechanism=DEFAULT
+TOKEN_SECRET=my-64bit-big-long-binary-sequence
